Compiler/gen/GrammerParser.py
# Generated from /home/yasaman/Desktop/compiler_project/Compiler/Grammer.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GrammerParser ( Parser ):

    grammarFileName = "Grammer.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "'int'", "'double'", 
                     "'boolean'", "'void'", "'{'", "'}'", "';'", "'='", 
                     "'++'", "'--'", "'return'", "'else'", "'if'", "'while'", 
                     "'true'", "'false'", "'*'", "'/'", "'%'", "'+'", "'-'", 
                     "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'&&'", 
                     "'||'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "STRINGLIST", "ESC", "INTEGER", 
                      "DOUBLE", "ID", "Whitespace", "Newline", "COMMENT", 
                      "MULTILINE_COMMENT" ]

    RULE_prog = 0
    RULE_func_list = 1
    RULE_func_def = 2
    RULE_param_list = 3
    RULE_param = 4
    RULE_data_type = 5
    RULE_code_block = 6
    RULE_stmt_list = 7
    RULE_stmt = 8
    RULE_decide = 9
    RULE_loop_stmt = 10
    RULE_init_stmt = 11
    RULE_post_stmt = 12
    RULE_var_list = 13
    RULE_var = 14
    RULE_expr = 15
    RULE_and = 16
    RULE_or = 17
    RULE_args = 18
    RULE_unop = 19
    RULE_number = 20

    ruleNames =  [ "prog", "func_list", "func_def", "param_list", "param", 
                   "data_type", "code_block", "stmt_list", "stmt", "decide", 
                   "loop_stmt", "init_stmt", "post_stmt", "var_list", "var", 
                   "expr", "and", "or", "args", "unop", "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    STRINGLIST=34
    ESC=35
    INTEGER=36
    DOUBLE=37
    ID=38
    Whitespace=39
    Newline=40
    COMMENT=41
    MULTILINE_COMMENT=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_list(self):
            return self.getTypedRuleContext(GrammerParser.Func_listContext,0)


        def getRuleIndex(self):
            return GrammerParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = GrammerParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.func_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_def(self):
            return self.getTypedRuleContext(GrammerParser.Func_defContext,0)


        def func_list(self):
            return self.getTypedRuleContext(GrammerParser.Func_listContext,0)


        def getRuleIndex(self):
            return GrammerParser.RULE_func_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_list" ):
                listener.enterFunc_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_list" ):
                listener.exitFunc_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_list" ):
                return visitor.visitFunc_list(self)
            else:
                return visitor.visitChildren(self)




    def func_list(self):

        localctx = GrammerParser.Func_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func_list)
        try:
            self.state = 48
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.func_def()
                self.state = 45
                self.func_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.func_def()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(GrammerParser.Data_typeContext,0)


        def ID(self):
            return self.getToken(GrammerParser.ID, 0)

        def code_block(self):
            return self.getTypedRuleContext(GrammerParser.Code_blockContext,0)


        def param_list(self):
            return self.getTypedRuleContext(GrammerParser.Param_listContext,0)


        def getRuleIndex(self):
            return GrammerParser.RULE_func_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_def" ):
                listener.enterFunc_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_def" ):
                listener.exitFunc_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_def" ):
                return visitor.visitFunc_def(self)
            else:
                return visitor.visitChildren(self)




    def func_def(self):

        localctx = GrammerParser.Func_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.data_type()
            self.state = 51
            self.match(GrammerParser.ID)
            self.state = 52
            self.match(GrammerParser.T__0)
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 53
                self.param_list()


            self.state = 56
            self.match(GrammerParser.T__1)
            self.state = 57
            self.code_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(GrammerParser.ParamContext,0)


        def param_list(self):
            return self.getTypedRuleContext(GrammerParser.Param_listContext,0)


        def getRuleIndex(self):
            return GrammerParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):

        localctx = GrammerParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_param_list)
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.param()
                self.state = 60
                self.match(GrammerParser.T__2)
                self.state = 61
                self.param_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.param()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(GrammerParser.Data_typeContext,0)


        def ID(self):
            return self.getToken(GrammerParser.ID, 0)

        def getRuleIndex(self):
            return GrammerParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = GrammerParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.data_type()
            self.state = 68
            self.match(GrammerParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GrammerParser.RULE_data_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_type" ):
                listener.enterData_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_type" ):
                listener.exitData_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData_type" ):
                return visitor.visitData_type(self)
            else:
                return visitor.visitChildren(self)




    def data_type(self):

        localctx = GrammerParser.Data_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_data_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 240) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Code_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt_list(self):
            return self.getTypedRuleContext(GrammerParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return GrammerParser.RULE_code_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode_block" ):
                listener.enterCode_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode_block" ):
                listener.exitCode_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCode_block" ):
                return visitor.visitCode_block(self)
            else:
                return visitor.visitChildren(self)




    def code_block(self):

        localctx = GrammerParser.Code_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_code_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(GrammerParser.T__7)
            self.state = 73
            self.stmt_list()
            self.state = 74
            self.match(GrammerParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(GrammerParser.StmtContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(GrammerParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return GrammerParser.RULE_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_list" ):
                listener.enterStmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_list" ):
                listener.exitStmt_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_list" ):
                return visitor.visitStmt_list(self)
            else:
                return visitor.visitChildren(self)




    def stmt_list(self):

        localctx = GrammerParser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmt_list)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 4, 5, 6, 7, 8, 10, 14, 16, 17, 18, 19, 24, 33, 34, 36, 37, 38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.stmt()
                self.state = 77
                self.stmt_list()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def code_block(self):
            return self.getTypedRuleContext(GrammerParser.Code_blockContext,0)


        def data_type(self):
            return self.getTypedRuleContext(GrammerParser.Data_typeContext,0)


        def var_list(self):
            return self.getTypedRuleContext(GrammerParser.Var_listContext,0)


        def ID(self):
            return self.getToken(GrammerParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(GrammerParser.ExprContext,0)


        def loop_stmt(self):
            return self.getTypedRuleContext(GrammerParser.Loop_stmtContext,0)


        def decide(self):
            return self.getTypedRuleContext(GrammerParser.DecideContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammerParser.StmtContext)
            else:
                return self.getTypedRuleContext(GrammerParser.StmtContext,i)


        def getRuleIndex(self):
            return GrammerParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = GrammerParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_stmt)
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.match(GrammerParser.T__9)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.code_block()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.data_type()
                self.state = 85
                self.var_list()
                self.state = 86
                self.match(GrammerParser.T__9)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 88
                self.match(GrammerParser.ID)
                self.state = 89
                self.match(GrammerParser.T__10)
                self.state = 90
                self.expr(0)
                self.state = 91
                self.match(GrammerParser.T__9)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 93
                self.match(GrammerParser.ID)
                self.state = 94
                self.match(GrammerParser.T__11)
                self.state = 95
                self.match(GrammerParser.T__9)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 96
                self.match(GrammerParser.ID)
                self.state = 97
                self.match(GrammerParser.T__12)
                self.state = 98
                self.match(GrammerParser.T__9)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 99
                self.match(GrammerParser.T__13)
                self.state = 100
                self.match(GrammerParser.T__9)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 101
                self.match(GrammerParser.T__13)
                self.state = 102
                self.expr(0)
                self.state = 103
                self.match(GrammerParser.T__9)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 105
                self.loop_stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 106
                self.decide()
                self.state = 107
                self.match(GrammerParser.T__0)
                self.state = 108
                self.expr(0)
                self.state = 109
                self.match(GrammerParser.T__1)
                self.state = 110
                self.stmt()
                self.state = 113
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 111
                    self.match(GrammerParser.T__14)
                    self.state = 112
                    self.stmt()


                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 115
                self.expr(0)
                self.state = 116
                self.match(GrammerParser.T__9)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecideContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GrammerParser.RULE_decide

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecide" ):
                listener.enterDecide(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecide" ):
                listener.exitDecide(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecide" ):
                return visitor.visitDecide(self)
            else:
                return visitor.visitChildren(self)




    def decide(self):

        localctx = GrammerParser.DecideContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_decide)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(GrammerParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loop_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(GrammerParser.ExprContext,0)


        def stmt(self):
            return self.getTypedRuleContext(GrammerParser.StmtContext,0)


        def getRuleIndex(self):
            return GrammerParser.RULE_loop_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop_stmt" ):
                listener.enterLoop_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop_stmt" ):
                listener.exitLoop_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop_stmt" ):
                return visitor.visitLoop_stmt(self)
            else:
                return visitor.visitChildren(self)




    def loop_stmt(self):

        localctx = GrammerParser.Loop_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_loop_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(GrammerParser.T__16)
            self.state = 123
            self.match(GrammerParser.T__0)
            self.state = 124
            self.expr(0)
            self.state = 125
            self.match(GrammerParser.T__1)
            self.state = 126
            self.stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(GrammerParser.Data_typeContext,0)


        def ID(self):
            return self.getToken(GrammerParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(GrammerParser.ExprContext,0)


        def getRuleIndex(self):
            return GrammerParser.RULE_init_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit_stmt" ):
                listener.enterInit_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit_stmt" ):
                listener.exitInit_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInit_stmt" ):
                return visitor.visitInit_stmt(self)
            else:
                return visitor.visitChildren(self)




    def init_stmt(self):

        localctx = GrammerParser.Init_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_init_stmt)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.data_type()
                self.state = 129
                self.match(GrammerParser.ID)
                self.state = 130
                self.match(GrammerParser.T__10)
                self.state = 131
                self.expr(0)
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.match(GrammerParser.ID)
                self.state = 134
                self.match(GrammerParser.T__10)
                self.state = 135
                self.expr(0)
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Post_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GrammerParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(GrammerParser.ExprContext,0)


        def getRuleIndex(self):
            return GrammerParser.RULE_post_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPost_stmt" ):
                listener.enterPost_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPost_stmt" ):
                listener.exitPost_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPost_stmt" ):
                return visitor.visitPost_stmt(self)
            else:
                return visitor.visitChildren(self)




    def post_stmt(self):

        localctx = GrammerParser.Post_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_post_stmt)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(GrammerParser.ID)
                self.state = 140
                self.match(GrammerParser.T__10)
                self.state = 141
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.match(GrammerParser.ID)
                self.state = 143
                self.match(GrammerParser.T__11)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.match(GrammerParser.ID)
                self.state = 145
                self.match(GrammerParser.T__12)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammerParser.VarContext)
            else:
                return self.getTypedRuleContext(GrammerParser.VarContext,i)


        def getRuleIndex(self):
            return GrammerParser.RULE_var_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_list" ):
                listener.enterVar_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_list" ):
                listener.exitVar_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_list" ):
                return visitor.visitVar_list(self)
            else:
                return visitor.visitChildren(self)




    def var_list(self):

        localctx = GrammerParser.Var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_var_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.var()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 150
                self.match(GrammerParser.T__2)
                self.state = 151
                self.var()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GrammerParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(GrammerParser.ExprContext,0)


        def getRuleIndex(self):
            return GrammerParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = GrammerParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_var)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.match(GrammerParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.match(GrammerParser.ID)
                self.state = 159
                self.match(GrammerParser.T__10)
                self.state = 160
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(GrammerParser.NumberContext,0)


        def ID(self):
            return self.getToken(GrammerParser.ID, 0)

        def STRINGLIST(self):
            return self.getToken(GrammerParser.STRINGLIST, 0)

        def args(self):
            return self.getTypedRuleContext(GrammerParser.ArgsContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammerParser.ExprContext)
            else:
                return self.getTypedRuleContext(GrammerParser.ExprContext,i)


        def unop(self):
            return self.getTypedRuleContext(GrammerParser.UnopContext,0)


        def and_(self):
            return self.getTypedRuleContext(GrammerParser.AndContext,0)


        def or_(self):
            return self.getTypedRuleContext(GrammerParser.OrContext,0)


        def getRuleIndex(self):
            return GrammerParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)
